crates/ditto-checker/tests/golden/type-errors/row_unification_error_1.ditto
module Test exports (..);

type ExtensibleProps(r) = ExtensibleProps({ r | foo: Int });

type BadExtension = Bad(ExtensibleProps(Int));
